--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -8,7 +8,7 @@ jobs:
     permissions:
       contents: write
     outputs:
-      version:  ${{ steps.tag_version.outputs.new_version }}
+      version:  ${{ steps.tag_version.outputs.version }}
       previous_tag: ${{ steps.tag_version.outputs.previous_tag }}
       bump_commit_sha: ${{ steps.bumpversion.outputs.commit_hash }}
       pr_number: ${{ steps.cpr.outputs.pull-request-number }}
@@ -18,28 +18,31 @@ jobs:
         id: tag_version
         uses: googleapis/release-please-action@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          release-type: simple
+          token: ${{ secrets.GITHUB_TOKEN }}
+          release-type: python
+          fork: true
+          skip-github-pull-request: true
+
       - name: Set up Python 3.12
         uses: actions/setup-python@v6
         with:
           python-version: "3.12"
       - name: Create bumpversion
-        if: steps.tag_version.outputs.new_version
+        if: steps.tag_version.outputs.version
         id: bumpversion
         run: |
           pip install bump2version
-          bump2version --new-version ${{ steps.tag_version.outputs.new_version }} setup.cfg tutoraspects/__about__.py .ci/config.yml
+          bump2version --new-version ${{ steps.tag_version.outputs.version }} setup.cfg tutoraspects/__about__.py .ci/config.yml
       - name: Update Changelog
-        if: steps.tag_version.outputs.new_version
+        if: steps.tag_version.outputs.version
         uses: stefanzweifel/changelog-updater-action@v1.12.0
         with:
-          latest-version: v${{ steps.tag_version.outputs.new_version }}
+          latest-version: v${{ steps.tag_version.outputs.version }}
           release-notes: ${{ steps.tag_version.outputs.changelog }}
       - name: Push branch
-        if: steps.tag_version.outputs.new_version
+        if: steps.tag_version.outputs.version
         run: |
-          branch_name="bot/v${{ steps.tag_version.outputs.new_version }}"
+          branch_name="bot/v${{ steps.tag_version.outputs.version }}"
           git fetch --prune origin
           if git show-ref --quiet refs/remotes/origin/$branch_name; then
             git push --delete origin $branch_name
@@ -52,16 +55,16 @@ jobs:
         with:
           token: ${{ secrets.versiontest }}
           push-to-fork: saraburns1/tutor-contrib-aspects
-          title: "chore: preparing release ${{ steps.tag_version.outputs.new_version }}"
-          commit-message: "chore: preparing release ${{ steps.tag_version.outputs.new_version }}"
-          branch: "bot/v${{ steps.tag_version.outputs.new_version }}"
+          title: "chore: preparing release ${{ steps.tag_version.outputs.version }}"
+          commit-message: "chore: preparing release ${{ steps.tag_version.outputs.version }}"
+          branch: "bot/v${{ steps.tag_version.outputs.version }}"
           base: main
           body: |
-            Automated version bump for release ${{ steps.tag_version.outputs.new_version }}.
+            Automated version bump for release ${{ steps.tag_version.outputs.version }}.
 
             This pull request was automatically generated. It includes the following changes:
 
-            - Version: v${{ steps.tag_version.outputs.new_version }}
+            - Version: v${{ steps.tag_version.outputs.version }}
             - Previous version: ${{ steps.tag_version.outputs.previous_tag }}
 
             ${{ steps.tag_version.outputs.changelog }}
