--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -9,7 +9,6 @@ jobs:
       contents: write
     outputs:
       version:  ${{ steps.tag_version.outputs.version }}
-      previous_tag: ${{ steps.tag_version.outputs.previous_tag }}
       bump_commit_sha: ${{ steps.bumpversion.outputs.commit_hash }}
       pr_number: ${{ steps.cpr.outputs.pull-request-number }}
     steps:
@@ -20,9 +19,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: python
-          fork: true
           skip-github-pull-request: true
-
       - name: Set up Python 3.12
         uses: actions/setup-python@v6
         with:
@@ -53,8 +50,7 @@ jobs:
         id: cpr
         uses: peter-evans/create-pull-request@v8
         with:
-          token: ${{ secrets.versiontest }}
-          push-to-fork: saraburns1/tutor-contrib-aspects
+          token: ${{ secrets.SEMANTIC_RELEASE_GITHUB_TOKEN }}
           title: "chore: preparing release ${{ steps.tag_version.outputs.version }}"
           commit-message: "chore: preparing release ${{ steps.tag_version.outputs.version }}"
           branch: "bot/v${{ steps.tag_version.outputs.version }}"
@@ -65,7 +61,6 @@ jobs:
             This pull request was automatically generated. It includes the following changes:
 
             - Version: v${{ steps.tag_version.outputs.version }}
-            - Previous version: ${{ steps.tag_version.outputs.previous_tag }}
 
             ${{ steps.tag_version.outputs.changelog }}
 
