--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -17,7 +17,7 @@ jobs:
         id: tag_version
         uses: googleapis/release-please-action@v4
         with:
-          token: ${{ secrets.SEMANTIC_RELEASE_GITHUB_TOKEN }}
+          token: ${{ secrets.versiontest }}
           release-type: python
           skip-labeling: true
           config-file: release-please-config.json
