Update GitHub token in release-please config

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,5 +1,5 @@
 {
-    "token": "${{ secrets.SEMANTIC_RELEASE_GITHUB_TOKEN }}",
+    "token": "${{ secrets.versiontest }}",
     "release-type": "python",
     "skip-labeling": true,
     "extra-files": [
