Remove unnecessary outputs from bumpversion job
Removed outputs for version, bump_commit_sha, and pr_number from the bumpversion job.

--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -7,15 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    outputs:
-      version:  ${{ steps.tag_version.outputs.version }}
-      bump_commit_sha: ${{ steps.bumpversion.outputs.commit_hash }}
-      pr_number: ${{ steps.cpr.outputs.pull-request-number }}
     steps:
       - uses: actions/checkout@v6
       - name: Get next version
         id: tag_version
         uses: googleapis/release-please-action@v4
         with:
-          token: ${{ secrets.versiontest }}
+          token: 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
           config-file: release-please-config.json
