--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -10,6 +10,11 @@ jobs:
       issues: write
       pull-requests: write
     steps:
+      - name: Setup | Checkout Repository on Release Branch
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref_name }}
+
       - name: Action | Semantic Version Release
         id: release
         # Adjust tag with desired version if applicable.
