--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -7,22 +7,68 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      issues: write
-      pull-requests: write
+    outputs:
+      version:  ${{ steps.tag_version.outputs.version }}
+      previous_version: ${{ steps.tag_version.outputs.previous_version }}
+      bump_commit_sha: ${{ steps.bumpversion.outputs.commit_hash }}
+      pr_number: ${{ steps.cpr.outputs.pull-request-number }}
     steps:
       - name: Setup | Checkout Repository on Release Branch
         uses: actions/checkout@v4
         with:
           ref: ${{ github.ref_name }}
-
       - name: Action | Semantic Version Release
         id: release
-        # Adjust tag with desired version if applicable.
         uses: python-semantic-release/python-semantic-release@v10.5.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           git_committer_name: "github-actions"
           git_committer_email: "actions@users.noreply.github.com"
-          commit: true
-          push: true
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.12"
+      - name: Create bumpversion
+        if: steps.tag_version.outputs.version
+        id: bumpversion
+        run: |
+          pip install bump2version
+          bump2version --new-version ${{ steps.tag_version.outputs.version }} setup.cfg tutoraspects/__about__.py .ci/config.yml
+      - name: Update Changelog
+        if: steps.tag_version.outputs.version
+        uses: stefanzweifel/changelog-updater-action@v1.12.0
+        with:
+          latest-version: v${{ steps.tag_version.outputs.version }}
+          release-notes: ${{ steps.tag_version.outputs.changelog }}
+      - name: Push branch
+        if: steps.tag_version.outputs.version
+        run: |
+          branch_name="bot/v${{ steps.tag_version.outputs.version }}"
+          git fetch --prune origin
+          if git show-ref --quiet refs/remotes/origin/$branch_name; then
+            git push --delete origin $branch_name
+          fi
+          git checkout -b $branch_name || git checkout $branch_name
+          git push origin $branch_name
+      - name: Create Pull Request
+        id: cpr
+        uses: peter-evans/create-pull-request@v8
+        with:
+          token: ${{ secrets.SEMANTIC_RELEASE_GITHUB_TOKEN }}
+          title: "chore: preparing release ${{ steps.tag_version.outputs.version }}"
+          commit-message: "chore: preparing release ${{ steps.tag_version.outputs.version }}"
+          branch: "bot/v${{ steps.tag_version.outputs.version }}"
+          base: main
+          body: |
+            Automated version bump for release ${{ steps.tag_version.outputs.version }}.
+
+            This pull request was automatically generated. It includes the following changes:
+
+            - Version: v${{ steps.tag_version.outputs.version }}
+
+            ${{ steps.tag_version.outputs.changelog }}
+
+            No code changes are included in this pull request. The purpose of this PR is to trigger a version bump for the project.
+
+            Once the pull request is merged, a new GitHub release will be created with the updated version.
 
