--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -7,11 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    # outputs:
-    #   version:  ${{ steps.tag_version.outputs.version }}
-    #   previous_version: ${{ steps.tag_version.outputs.previous_version }}
-    #   bump_commit_sha: ${{ steps.bumpversion.outputs.commit_hash }}
-    #   pr_number: ${{ steps.cpr.outputs.pull-request-number }}
+      pull-requests: write
     steps:
       - name: Setup | Checkout Repository on Release Branch
         uses: actions/checkout@v4
@@ -55,7 +51,7 @@ jobs:
         id: cpr
         uses: peter-evans/create-pull-request@v8
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.SEMANTIC_RELEASE_GITHUB_TOKEN }}
           title: "chore: preparing release ${{ steps.tag_version.outputs.version }}"
           commit-message: "chore: preparing release ${{ steps.tag_version.outputs.version }}"
           branch: "bot/${{ steps.tag_version.outputs.tag }}"
