--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -9,17 +9,12 @@ jobs:
       contents: write
       pull-requests: write
     steps:
-      - name: Setup | Checkout Repository on Release Branch
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.ref_name }}
-      - name: Action | Semantic Version Release
+      - uses: actions/checkout@v6
+      - name: Get next version
         id: tag_version
         uses: python-semantic-release/python-semantic-release@v10.5.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          git_committer_name: "github-actions"
-          git_committer_email: "actions@users.noreply.github.com"
           push: false
       - name: Set up Python 3.12
         uses: actions/setup-python@v6
@@ -62,6 +57,7 @@ jobs:
             This pull request was automatically generated. It includes the following changes:
 
             - Version: ${{ steps.tag_version.outputs.tag }}
+            - Previous version: ${{ steps.tag_version.outputs.previous_version }}
 
             ${{ steps.tag_version.outputs.changelog }}
 
